[package]
name = "gavel"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "^1", features = ["full"] }
tokio-util = "^0.7"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
clap = { version = "^4", features = ["derive"] }
tokio-tungstenite = { version = "^0.21", features = ["native-tls"] }
futures-util = "^0.3"
rand = "^0.8"
url = "^2.5.0"
http = "^1.1.0"
native-tls = "^0.2.9"
tokio-native-tls = "^0.3.1"
# hyper-dns = "^0.3.0"
# smoldot = "^0.17.0"
# subxt = { version = "^0.35.3" }
# subxt-lightclient = { version = "^0.35.3" }
